# balhauapi

./: .gitignore  README.md
balhauapi/: .env  Cargo.toml  config.yml
balhauapi/migrations/2017-12-03-181027_balhau_api/: down.sql  up.sql
balhauapi/migrations/2017-12-18-211953_create_bookmarks/: down.sql  up.sql
balhauapi/migrations/2017-12-25-124535_ereader/: down.sql  up.sql
balhauapi/src/: lib.rs
balhauapi/src/automation/: mod.rs  remotecommand.rs
balhauapi/src/bookmarks/: mod.rs
balhauapi/src/confs/: envs.rs  mod.rs  msgs.rs
balhauapi/src/db/: api.rs  mod.rs  schema.rs
balhauapi/src/db/blog/: models.rs
balhauapi/src/db/bookmarks/: models.rs
balhauapi/src/db/ereader/: models.rs
balhauapi/src/downloader/: mod.rs  processor.rs  youtube.rs
coinscrapper/: Cargo.toml
coinscrapper/src/: lib.rs
coinscrapper/src/coingecko/: yfd.py
coinscrapper/src/coinmarketcap/: mod.rs
mockserver/: Cargo.toml
mockserver/src/: lib.rs
mockserver/src/yts/: data.rs  mocks.rs  mod.rs
