[package]
name = "balhauapi"
version = "0.1.0"
authors = ["Balhau <balhau@balhau.net>"]

[dependencies]

diesel = { version = "0.99.0", features = ["postgres","sqlite"] }
diesel_infer_schema = { version = "0.99.0", features = ["postgres"] }
dotenv = "0.10"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "2.29.0"
select = "0.4.2"
rusqlite = "0.11.0"