[package]
name = "balhauapi"
version = "0.1.0"
authors = ["Balhau <balhau@balhau.net>"]

[dependencies]

diesel = { version = "1.4.2", features = ["postgres","sqlite"] }
diesel_infer_schema = { version = "1.4.0", features = ["postgres"] }
dotenv = "0.10"
rocket = "0.4.2"
rocket_codegen = "0.4.2"
rocket_contrib = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
clap = "2.29.0"
select = "0.4.2"
#rusqlite = "0.20.0"
ssh2 = "0.3"