[package]
name = "coinscrapper"
version = "0.1.0"
authors = ["balhau <balhau@balhau.net>"]
edition = "2018"

[dependencies]
rweb = { version = "0.5", features = ["openapi"] }
reqwest="0.10.6"
scraper = "0.12.0"
kafka = "0.8.0"
rustc-test = "0.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3"
tokio="0.2"

[dev-dependencies]
futures = "0.3"