[package]
name = "mockserver"
version = "0.1.0"
authors = ["Balhau <balhau@balhau.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rweb = { version = "0.5", features = ["openapi"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
futures = "0.3"
tokio="0.2"