[package]
name = "mockserver"
version = "0.1.0"
authors = ["Balhau <balhau@balhau.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
actix-web = "2.0"
actix-cors = "0.2.0"
actix-rt = "1.0"
env_logger="0.7.1"
log="0.4.8"
